<resources>
    <string name="app_name">Hare &amp; Hounds</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="button_add_friend">Dodaj znajomego</string>
    <string name="umie_tutaj_zagadk">Umieść tutaj zagadkę</string>
    <string name="nazwa_rozgrywki">Nazwa rozgrywki</string>
    <string name="uciekaj_cy_gracz">Uciekający gracz:</string>
    <string name="gracz1">Gracz1</string>
    <string name="goni_cy_gracz">Goniący gracz:</string>
    <string name="gracz2">Gracz2</string>
    <string name="zatwierd_gotowo_do_startu">Zatwierdź gotowość do startu</string>
</resources>
